--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -440,30 +440,88 @@ main {
   main article {
     margin: 0 auto;
     width: 960px; }
-    main article p, main article blockquote, main article ol, main article ul, main article h2, main article h3, main article h4, main article h5, main article h6, main article table {
+    main article.duascolunas {
+      display: -webkit-box;
+      display: -moz-box;
+      display: box;
+      display: -webkit-flex;
+      display: -moz-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: justify;
+      -moz-box-pack: justify;
+      box-pack: justify;
+      -webkit-justify-content: space-between;
+      -moz-justify-content: space-between;
+      -ms-justify-content: space-between;
+      -o-justify-content: space-between;
+      justify-content: space-between;
+      -ms-flex-pack: justify;
+      -webkit-box-lines: multiple;
+      -moz-box-lines: multiple;
+      box-lines: multiple;
+      -webkit-flex-wrap: wrap;
+      -moz-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap; }
+      main article.duascolunas > div.coluna {
+        width: 48%; }
+        main article.duascolunas > div.coluna > * {
+          width: 100%; }
+    main article > * {
       width: 60%; }
     main article a, main article a:visited {
       color: #d26200; }
     main article h2 {
       font-size: 2.5em;
-      line-height: 1.3;
+      line-height: 1.2;
       margin-top: 1em;
       margin-bottom: 0; }
       main article h2:first-child {
         margin-top: 0; }
+    main article h3 {
+      font-size: 1.4em;
+      line-height: 1.3;
+      margin-top: 1em;
+      margin-bottom: 0;
+      color: #299025; }
+      main article h3:first-child {
+        margin-top: 0; }
+    main article p {
+      margin: 1.5em 0; }
     main article table {
-      font-size: 0.9em; }
+      margin: 3em 0;
+      font-size: 0.9em;
+      line-height: 1.2; }
       main article table, main article table * {
         border-collapse: collapse; }
       main article table th {
-        padding: 0 0 0.3em;
+        padding: 0.3em 0.6em;
         text-align: left; }
       main article table thead {
         border-bottom: 2px solid black; }
       main article table tbody tr {
         border-bottom: 1px solid grey; }
         main article table tbody tr th, main article table tbody tr td {
-          padding: 0.2em 0; }
+          padding: 0.3em 0.6em; }
+    main article figure {
+      margin: 2em 0; }
+      main article figure img {
+        display: block;
+        width: 100%;
+        height: auto;
+        display: block;
+        box-shadow: 0 0 6px rgba(0, 0, 0, 0.2); }
+      main article figure figcaption {
+        margin-top: 0.5em;
+        font-size: 0.9em;
+        color: #666666; }
+    main article .box {
+      border: 1px dotted grey;
+      border-left-width: 0;
+      border-right-width: 0;
+      padding: 2em 0 2em 2em;
+      margin: 2em 0; }
     main article .pergunta {
       padding-bottom: 4em;
       border-bottom: 1px solid rgba(0, 0, 0, 0.2);
