--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,13 +19,26 @@ body{
 	@include display(flex);
 	@include justify-content(center);
 	@include align-items(center);
+	.container{
+		width: $largura-container;
+		@include display(flex);
+		@include justify-content(space-between);
+		@include align-items(center);
+	}
 	h1{
 		color: white;
 		margin: 0;
-		width: $largura-container;
-		text-align: center;
+		text-align: left;
 		text-shadow: 2px 2px 2px rgba(0,0,0,0.3);
 	}
+
+	.btsumario{
+		background-image: url(../media/btsumario2.svg);
+		background-size: cover;
+		background-repeat: no-repeat;
+		margin-right: 6px;
+	}
+
 	&.abertura{
 		padding: 0;
 		height: calc(100vh - 100px);
@@ -134,7 +147,16 @@ main{
 			margin: 1.5em 0;
 		}
 
+		.pagina{
+			float: right;
+			width: auto;
+			display: block;
+			font-size: 2em;
+			color: grey;
+		}
+
 		table{
+			width: 60%;
 			margin: 3em 0;
 			font-size: 0.9em;
 			line-height: 1.2;
@@ -184,6 +206,19 @@ main{
 			margin: 2em 0;
 		}
 
+		dl{
+			margin: 0;
+			dt{
+				font-weight: bold;
+			}
+			dd{
+				margin: 0;
+				&+dt{
+					margin-top: 2em;
+				}
+			}
+		}
+
 		.pergunta{
 			padding-bottom: 4em;
 			border-bottom: 1px solid rgba(0,0,0,0.2);
@@ -203,27 +238,37 @@ main{
 				}
 			}
 
+			.enunciado{
+				& >{
+					*{
+						width: 100%;
+					}
 
+					h2{
+						width: auto;
+						margin: 0 0.5em 0em 0;
+						font-weight: bold;
+						float: left;
+						vertical-align: middle;
+						line-height: 1;
+					}
 
-			h2{
-				width: auto;
-				margin: 0 0.5em 0em 0;
-				font-weight: bold;
-				float: left;
-				vertical-align: middle;
-				line-height: 1;
+					h3{
+						@extend %texto-gradiente;
+						width: auto;
+						margin: 0 0.5em 0em 0;
+						font-weight: bold;
+						float: left;
+						vertical-align: middle;
+						line-height: 1;
+						font-size: 1.5em;
+					}	
+				}
 			}
 
-			h3{
-				@extend %texto-gradiente;
-				width: auto;
-				margin: 0 0.5em 0em 0;
-				font-weight: bold;
-				float: left;
-				vertical-align: middle;
-				line-height: 1;
-				font-size: 1.5em;
-			}
+
+
+			
 
 
 
@@ -232,7 +277,7 @@ main{
 				clear: both;
 				label{
 					padding: 0.4em 0 0.4em 2em;
-					width: 60%;
+					// width: 60%;
 					display: block;
 					margin-bottom: 0.6em;
 					background-color: transparentize($laranja-erro, 1);
@@ -506,17 +551,49 @@ main{
 	padding: 6px;
 	@include display(flex);
 	@include justify-content(flex-end);
+	.btsumario{
+		background: $verde-claro-fundo; /* Old browsers */
+		background: -moz-linear-gradient(-45deg, $ciano-fundo 0%, $verde-base 100%); /* FF3.6-15 */
+		background: -webkit-linear-gradient(-45deg, $ciano-fundo 0%,$verde-base 100%); /* Chrome10-25,Safari5.1-6 */
+		background: linear-gradient(135deg, $ciano-fundo 0%,$verde-base 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+		box-shadow: 0px 0px 0px rgba(0,0,0,0.3);
+		&:hover{
+			box-shadow: 0px 1px 3px rgba(0,0,0,0.3);
+			&:before{
+				opacity: 1;
+			}
+		}
+
+		&:before, &:after{
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			display: block;
+			width: 100%;
+			height: 100%;
+		}
+		&:before{
+			background-color: $laranja-base;
+			z-index: 1;
+			opacity: 0;
+			@include transition(opacity 0.2s linear);
+		}
+		&:after{
+			background-image: url(../media/btsumario.svg);
+			background-size: cover;
+			z-index: 2;
+
+		}
+
+	}
 }
 
-#btsumario{
+.btsumario{
 	width: 50px;
 	height: 50px;
-	background: $verde-claro-fundo; /* Old browsers */
-	background: -moz-linear-gradient(-45deg, $ciano-fundo 0%, $verde-base 100%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(-45deg, $ciano-fundo 0%,$verde-base 100%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(135deg, $ciano-fundo 0%,$verde-base 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	
 	position: relative;
-	box-shadow: 0px 0px 0px rgba(0,0,0,0.3);
 	@include transition(all 0.2s linear);
 	@include transition-property(box-shadow, opacity);
 
@@ -527,33 +604,6 @@ main{
 
 	&:hover{
 		cursor: pointer;
-		box-shadow: 0px 1px 3px rgba(0,0,0,0.3);
-
-		&:before{
-			opacity: 1;
-		}
-	}
-
-	&:before, &:after{
-		content: '';
-		position: absolute;
-		top: 0;
-		left: 0;
-		display: block;
-		width: 100%;
-		height: 100%;
-	}
-	&:before{
-		background-color: $laranja-base;
-		z-index: 1;
-		opacity: 0;
-		@include transition(opacity 0.2s linear);
-	}
-	&:after{
-		background-image: url(../media/btsumario.svg);
-		background-size: cover;
-		z-index: 2;
-
 	}
 }
 
